--- a/pinyougouinterface/pom.xml
+++ b/pinyougouinterface/pom.xml
@@ -18,6 +18,9 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+        </dependency>
     </dependencies>
 </project>
