--- a/pinyougouservice/pom.xml
+++ b/pinyougouservice/pom.xml
@@ -62,6 +62,12 @@
             <artifactId>curator-framework</artifactId>
         </dependency>
 
+        <!-- 配置分页插件 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
