--- a/pinyougouservice/pinyougousellergoodsservice/pom.xml
+++ b/pinyougouservice/pinyougousellergoodsservice/pom.xml
@@ -9,8 +9,15 @@
   <modelVersion>4.0.0</modelVersion>  
   <artifactId>pinyougou-sellergoods-service</artifactId>
   <packaging>war</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
 
-  <properties>
+    <properties>
     <!-- 覆盖父工程中的port属性 -->
     <port>9001</port>
   </properties>
