--- a/pinyougouweb/pinyougoumanagerweb/pom.xml
+++ b/pinyougouweb/pinyougoumanagerweb/pom.xml
@@ -42,6 +42,15 @@
       <groupId>com.tianzhen</groupId>  
       <artifactId>pinyougou-interface</artifactId>  
       <version>1.0-SNAPSHOT</version> 
-    </dependency> 
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-test</artifactId>
+      </dependency>
   </dependencies> 
 </project>
