--- a/pinyougouweb/pinyougoumanagerweb/src/main/webapp/WEB-INF/web.xml
+++ b/pinyougouweb/pinyougoumanagerweb/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,16 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath*:applicationContext-*.xml</param-value>
+	</context-param>
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+
+	</listener>
+
+
 	<!-- 配置全局编码过滤器 -->
 	<filter>
 		<filter-name>characterEncodingFilter</filter-name>
@@ -31,6 +41,23 @@
 		<filter-name>characterEncodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
+	<!--4. Shiro权限校验过滤器，这里的filter-name固定，对应spring容器中的过滤器工厂的bean的id-->
+	<filter>
+		<filter-name>shiroFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<init-param>
+			<param-name>targetFilterLifecycle</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+
+
 
 	<!-- 欢迎列表 -->
 	<welcome-file-list>
