--- a/pinyougouweb/pom.xml
+++ b/pinyougouweb/pom.xml
@@ -16,6 +16,7 @@
     <name>pinyougou-web</name>
     <modules>
         <module>pinyougoumanagerweb</module>
+        <module>pinyougoushopweb</module>
     </modules>
 
     <properties>
@@ -66,6 +67,24 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>log4j</artifactId>
+                    <groupId>log4j</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- 配置shiro安全框架 -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.4.0</version>
+
         </dependency>
 
     </dependencies>
