--- a/pinyougouweb/pom.xml
+++ b/pinyougouweb/pom.xml
@@ -86,7 +86,17 @@
             <version>1.4.0</version>
 
         </dependency>
-
+        <!--文件上传-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+        </dependency>
+        <!--七牛-->
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+            <version>7.2.10</version>
+        </dependency>
     </dependencies>
 
     <!-- 构建部分 -->
