--- a/pinyougouservice/pom.xml
+++ b/pinyougouservice/pom.xml
@@ -14,6 +14,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>pinyougousellergoodsservice</module>
+        <module>pinyougoucontentservice</module>
     </modules>
 
     <properties>
