品优购项目第九天 - 完成网站首页-广告展示功能 - 运用SpringDataRedis框架操作缓存

--- a/pinyougouweb/pom.xml
+++ b/pinyougouweb/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>pinyougoumanagerweb</module>
         <module>pinyougoushopweb</module>
+        <module>pinyougouportalweb</module>
     </modules>
 
     <properties>
