--- a/pinyougouservice/pom.xml
+++ b/pinyougouservice/pom.xml
@@ -50,7 +50,12 @@
             <artifactId>pinyougou-mapper</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <!--pinyougou-common-->
+        <dependency>
+            <groupId>com.tianzhen</groupId>
+            <artifactId>pinyougou-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <!-- dubbo -->
         <dependency>
