品优购项目第十天 - 完成批量数据导入的功能 - 完成关键字搜索功能

--- a/pinyougoumapper/pom.xml
+++ b/pinyougoumapper/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>pinyougou-pojo</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
