--- a/pinyougouweb/pom.xml
+++ b/pinyougouweb/pom.xml
@@ -19,6 +19,7 @@
         <module>pinyougoushopweb</module>
         <module>pinyougouportalweb</module>
         <module>pinyougousearchweb</module>
+        <module>pinyougouitemweb</module>
     </modules>
 
     <properties>
