品优购项目第十三天 - 整合rocketmq消息队列 - 使用freemarker实现动态网页的静态化 - 商品上下架,发送消息给搜索系统更新索引库 - 商品上下架,发送消息给商品详情系统生成或删除静态网页

--- a/pinyougouweb/pinyougoumanagerweb/pom.xml
+++ b/pinyougouweb/pinyougoumanagerweb/pom.xml
@@ -7,7 +7,14 @@
     <version>1.0-SNAPSHOT</version> 
   </parent>  
   <modelVersion>4.0.0</modelVersion>  
-  <artifactId>pinyougou-manager-web</artifactId>  
+  <artifactId>pinyougou-manager-web</artifactId>
+
+
+  <properties>
+    <port>9009</port>
+  </properties>
+
+
   <!-- 配置依赖关系 -->  
   <packaging>war</packaging>
   <dependencies> 
