--- a/pinyougouweb/pinyougousearchweb/pom.xml
+++ b/pinyougouweb/pinyougousearchweb/pom.xml
@@ -6,7 +6,21 @@
     <groupId>com.tianzhen</groupId>  
     <version>1.0-SNAPSHOT</version> 
   </parent>  
-  <modelVersion>4.0.0</modelVersion>  
+  <modelVersion>4.0.0</modelVersion>
+
+  <properties>
+    <port>9011</port>
+  </properties>
+
   <artifactId>pinyougou-search-web</artifactId>
-  <packaging>war</packaging> 
+  <packaging>war</packaging>
+  <dependencies>
+    <!-- rocketmq-client -->
+    <dependency>
+      <groupId>org.apache.rocketmq</groupId>
+      <artifactId>rocketmq-client</artifactId>
+    </dependency>
+
+  </dependencies>
+
 </project>
