品优购项目第十四天 - 添加了用户注册发送短信验证码的功能 - 增加了用户服务和用户web前台注册模块 - 增加了短信服务和短信接口模块

--- a/pinyougoucommon/pom.xml
+++ b/pinyougoucommon/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
         </dependency>
+        <!--httpclient-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
