--- a/pinyougouweb/pom.xml
+++ b/pinyougouweb/pom.xml
@@ -20,12 +20,15 @@
         <module>pinyougouportalweb</module>
         <module>pinyougousearchweb</module>
         <module>pinyougouitemweb</module>
+        <module>pinyougousmsweb</module>
+        <module>pinyougouuserweb</module>
     </modules>
 
     <properties>
-        <!-- tomcat端口号 -->
         <port>9100</port>
     </properties>
+
+
 
     <!-- 配置依赖关系 -->
     <dependencies>
@@ -100,6 +103,8 @@
             <artifactId>qiniu-java-sdk</artifactId>
             <version>7.2.10</version>
         </dependency>
+
+
     </dependencies>
 
     <!-- 构建部分 -->
