--- a/pinyougoucommon/pom.xml
+++ b/pinyougoucommon/pom.xml
@@ -66,6 +66,13 @@
             <artifactId>httpclient</artifactId>
         </dependency>
 
+        <!-- servlet-api -->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
