--- a/pinyougouweb/pom.xml
+++ b/pinyougouweb/pom.xml
@@ -22,6 +22,7 @@
         <module>pinyougouitemweb</module>
         <module>pinyougousmsweb</module>
         <module>pinyougouuserweb</module>
+        <module>pinyougoucartweb</module>
     </modules>
 
     <properties>
